--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -84,6 +84,14 @@
                 </td>
               </ng-container>
 
+              <!-- Get Link to Responses -->
+              <ng-container matColumnDef="respondURL">
+                <th mat-header-cell *matHeaderCellDef>RespondURL</th>
+                <td mat-cell *matCellDef="let element">
+                  <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
+                </td>
+              </ng-container>
+
               <!-- Header and Rows -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -228,6 +236,14 @@
               <ng-container matColumnDef="publish">
                 <th mat-header-cell *matHeaderCellDef>Publish</th>
                 <td mat-cell *matCellDef="let element"></td>
+              </ng-container>
+
+              <!-- Get Link to Responses -->
+              <ng-container matColumnDef="respondURL">
+                <th mat-header-cell *matHeaderCellDef>RespondURL</th>
+                <td mat-cell *matCellDef="let element">
+                  <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
+                </td>
               </ng-container>
 
               <!-- Header and Rows -->
