--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -92,6 +92,18 @@
                 </td>
               </ng-container>
 
+              <!-- Edit Survey -->
+              <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef>Edit</th>
+                <td mat-cell *matCellDef="let element">
+                  <a
+                    [routerLink]="['/survey', element.surveyId, 'edit']"
+                    class="survey-link"
+                    >Edit</a
+                  >
+                </td>
+              </ng-container>
+
               <!-- Header and Rows -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -170,6 +182,12 @@
                 </td>
               </ng-container>
 
+              <!-- Edit Survey -->
+              <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef>Edit</th>
+                <td mat-cell *matCellDef="let element"></td>
+              </ng-container>
+
               <!-- Header and Rows -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -244,6 +262,12 @@
                 <td mat-cell *matCellDef="let element">
                   <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
                 </td>
+              </ng-container>
+
+              <!-- Edit Survey -->
+              <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef>Edit</th>
+                <td mat-cell *matCellDef="let element"></td>
               </ng-container>
 
               <!-- Header and Rows -->
