--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -28,81 +28,11 @@
     <!-- Table -->
     <div class="panel panel-default">
       <mat-tab-group (selectedTabChange)="onTabChanged($event)">
-        <mat-tab label="Draft">
+        <mat-tab *ngFor="let tabLabel of tabOrder" [label]="tabLabel">
           <ng-template matTabContent>
             <table
               mat-table
-              [dataSource]="draftSurveys"
-              matSort
-              class="mat-elevation-z8 survey-table"
-            >
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/survey', element.surveyId]"
-                    class="survey-link"
-                    >{{ element.name }}</a
-                  >
-                </td>
-              </ng-container>
-
-              <!-- Description Column -->
-              <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Description
-                </th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.description }}
-                </td>
-              </ng-container>
-
-              <!-- Owner Column -->
-              <ng-container matColumnDef="owner">
-                <th mat-header-cell *matHeaderCellDef>Owner</th>
-                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
-              </ng-container>
-
-              <!-- Responses -->
-              <ng-container matColumnDef="responses">
-                <th mat-header-cell *matHeaderCellDef>Responses</th>
-                <td mat-cell *matCellDef="let element"></td>
-              </ng-container>
-
-              <!-- Analysis -->
-              <ng-container matColumnDef="analysis">
-                <th mat-header-cell *matHeaderCellDef>Analysis</th>
-                <td mat-cell *matCellDef="let element"></td>
-              </ng-container>
-
-              <!-- End Publish -->
-              <ng-container matColumnDef="publish">
-                <th mat-header-cell *matHeaderCellDef>Publish</th>
-                <td mat-cell *matCellDef="let element">
-                  <button (click)="startPublish(element.surveyId)">Start Publish</button>
-                </td>
-              </ng-container>
-
-              <!-- Get Link to Responses -->
-              <ng-container matColumnDef="respondURL">
-                <th mat-header-cell *matHeaderCellDef>RespondURL</th>
-                <td mat-cell *matCellDef="let element">
-                  <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
-                </td>
-              </ng-container>
-
-              <!-- Header and Rows -->
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </ng-template>
-        </mat-tab>
-        <mat-tab label="Published">
-          <ng-template matTabContent>
-            <table
-              mat-table
-              [dataSource]="publishedSurveys"
+              [dataSource]="dataSources[tabLabel]"
               matSort
               class="mat-elevation-z8 survey-table"
             >
@@ -149,8 +79,9 @@
                   <a
                     [routerLink]="['/survey', element.surveyId, 'analysis']"
                     class="survey-link"
-                    >Analysis</a
                   >
+                    <button>Analysis</button>
+                  </a>
                 </td>
               </ng-container>
 
@@ -158,91 +89,22 @@
               <ng-container matColumnDef="publish">
                 <th mat-header-cell *matHeaderCellDef>Publish</th>
                 <td mat-cell *matCellDef="let element">
-                  <button (click)="endPublish(element.surveyId)">End Publish</button>
+                  <button (click)="startPublish(element.surveyId)" *ngIf="element.status == 'draft'">
+                    Start
+                  </button>
+                  <button (click)="endPublish(element.surveyId)" *ngIf="element.status == 'published'">
+                    End
+                  </button>
                 </td>
               </ng-container>
 
               <!-- Get Link to Responses -->
               <ng-container matColumnDef="respondURL">
-                <th mat-header-cell *matHeaderCellDef>RespondURL</th>
+                <th mat-header-cell *matHeaderCellDef>Respondent URL</th>
                 <td mat-cell *matCellDef="let element">
-                  <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
-                </td>
-              </ng-container>
-
-              <!-- Header and Rows -->
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </ng-template>
-        </mat-tab>
-        <mat-tab label="Ended">
-          <ng-template matTabContent>
-            <table
-              mat-table
-              [dataSource]="endedSurveys"
-              matSort
-              class="mat-elevation-z8 survey-table"
-            >
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/survey', element.surveyId]"
-                    class="survey-link"
-                    >{{ element.name }}</a
-                  >
-                </td>
-              </ng-container>
-
-              <!-- Description Column -->
-              <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Description
-                </th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.description }}
-                </td>
-              </ng-container>
-
-              <!-- Owner Column -->
-              <ng-container matColumnDef="owner">
-                <th mat-header-cell *matHeaderCellDef>Owner</th>
-                <td mat-cell *matCellDef="let element">{{ element.owner }}</td>
-              </ng-container>
-
-              <!-- Responses -->
-              <ng-container matColumnDef="responses">
-                <th mat-header-cell *matHeaderCellDef>Responses</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ responses[element.surveyId] }}
-                </td>
-              </ng-container>
-
-              <!-- Analysis -->
-              <ng-container matColumnDef="analysis">
-                <th mat-header-cell *matHeaderCellDef>Analysis</th>
-                <td mat-cell *matCellDef="let element">
-                  <a
-                    [routerLink]="['/survey', element.surveyId, 'analysis']"
-                    class="survey-link"
-                    >Analysis</a
-                  >
-                </td>
-              </ng-container>
-
-              <!-- End Publish -->
-              <ng-container matColumnDef="publish">
-                <th mat-header-cell *matHeaderCellDef>Publish</th>
-                <td mat-cell *matCellDef="let element"></td>
-              </ng-container>
-
-              <!-- Get Link to Responses -->
-              <ng-container matColumnDef="respondURL">
-                <th mat-header-cell *matHeaderCellDef>RespondURL</th>
-                <td mat-cell *matCellDef="let element">
-                  <button (click)="copyRespondentURL(element.surveyId)">Copy Respondent URL</button>
+                  <button (click)="copyRespondentURL(element.surveyId)">
+                    Copy URL
+                  </button>
                 </td>
               </ng-container>
 
