--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -100,7 +100,7 @@
 
               <!-- Get Link to Responses -->
               <ng-container matColumnDef="respondURL">
-                <th mat-header-cell *matHeaderCellDef>Respondent URL</th>
+                <th mat-header-cell *matHeaderCellDef>Respondent</th>
                 <td mat-cell *matCellDef="let element">
                   <button (click)="copyRespondentURL(element.surveyId)">
                     Copy URL
