--- a/surveysage/src/app/surveylist/surveylist.component.html
+++ b/surveysage/src/app/surveylist/surveylist.component.html
@@ -116,6 +116,13 @@
                 </td>
               </ng-container>
 
+              <ng-container matColumnDef="deleteBtn">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                  <button (click)="deleteSurvey(element.surveyId)">🗑️</button>
+                </td>
+              </ng-container>
+
               <!-- Header and Rows -->
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
